--- a/src/ARCTokenization/structural_ontologies/arc_file_structure_ontology.yml
+++ b/src/ARCTokenization/structural_ontologies/arc_file_structure_ontology.yml
@@ -53,3 +53,73 @@ def: ""
 id: AFSO:00000010
 name: Directory Path
 def: ""
+
+[Term]
+id: AFSO:00000011
+name: Studies Directory
+def: ""
+
+[Term]
+id: AFSO:00000012
+name: Assays Directory
+def: ""
+
+[Term]
+id: AFSO:00000013
+name: Runs Directory
+def: ""
+
+[Term]
+id: AFSO:00000014
+name: Workflows Directory
+def: ""
+
+[Term]
+id: AFSO:00000015
+name: Study Directory
+def: ""
+
+[Term]
+id: AFSO:00000016
+name: Assay Directory
+def: ""
+
+[Term]
+id: AFSO:00000017
+name: Run Directory
+def: ""
+
+[Term]
+id: AFSO:00000018
+name: Workflow Directory
+def: ""
+
+[Term]
+id: AFSO:00000019
+name: Investigation File
+def: ""
+
+[Term]
+id: AFSO:00000020
+name: Study File
+def: ""
+
+[Term]
+id: AFSO:00000021
+name: Assay File
+def: ""
+
+[Term]
+id: AFSO:00000022
+name: Dataset File
+def: ""
+
+[Term]
+id: AFSO:00000023
+name: CWL File
+def: ""
+
+[Term]
+id: AFSO:00000024
+name: YML File
+def: ""
