Add tests for CvTerm

--- a/tests/ControlledVocabulary.Tests/ControlledVocabulary.Tests.fsproj
+++ b/tests/ControlledVocabulary.Tests/ControlledVocabulary.Tests.fsproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <Compile Include="ReferenceObjects.fs" />
+    <Compile Include="CvTermTests.fs" />
     <Compile Include="CvParamTests.fs" />
     <Compile Include="CvBaseTests.fs" />
     <Compile Include="ParamTests.fs" />
